--- a/src/app/workshop/vote/vote.component.html
+++ b/src/app/workshop/vote/vote.component.html
@@ -13,7 +13,9 @@
   </div>
 </div>
 
-<div *ngFor="let message of messages">
+<div *ngFor="let tmp of template.templateDetail">
+  <h3>{{tmp.header}}</h3>
+<div *ngFor="let message of GetHeaderMessage(tmp.id)">
   <div class="row" >
     <div class="col-md-12">
       <div class="card">
@@ -50,7 +52,7 @@
     </div>
   </div>
 </div>
-
+</div>
 
 
 <div class="row" *ngIf="!isUser">
