--- a/src/app/workshop/categorized/categorized.component.html
+++ b/src/app/workshop/categorized/categorized.component.html
@@ -10,60 +10,29 @@
   </div>
 </div>
 
-<!-- <div *ngFor="let item of categorizedMessages">
-  <div class="row" [ngClass]="{'disabled': isUser }" *ngIf="item.messages.length>0">
-    <div class="col-md-12">
-
-
-      <div class="card">
-        <div class="card-header">
-
-          <div class="row">
-            <div class="col-sm-8">
-              <label class="label">
-
-                {{ item.category.categoryTitle }}
-
-
-              </label>
-            </div>
-            <div class="col-sm-4">
-              <button (click)="deleteCategory(item)" *ngIf="!isUser"
-                class="btn btn-round btn-danger float-right btn-xs">
-                <i class="fa fa-reply"></i>
-              </button>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-
-    </div>
-
-  </div>
-</div> -->
-<!-- </div>
-</div> -->
-
-<div *ngFor="let msg of messages">
-  <div class="row" [ngClass]="{'disabled': isUser }">
-    <div class="col-md-12">
-      <div class="card">
-        <div class="card-header">
-          <div class="form-check mt-3">
-            <div class="form-check">
-              <label class="form-check-label">
-                <input *ngIf="!isUser" class="form-check-input" [(ngModel)]="msg.isCategorized" type="checkbox" />
-                {{ msg.messageText }} <span class="form-check-sign" *ngIf="!isUser"></span>
-              </label>
+<div *ngFor="let tmp of template.templateDetail">
+         <h3>{{tmp.header}}</h3>
+         
+         <div *ngFor="let msg of GetHeaderMessage(tmp.id)">
+          <div class="row" [ngClass]="{'disabled': isUser }">
+            <div class="col-md-12">
+              <div class="card">
+                <div class="card-header">
+                  <div class="form-check mt-3">
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input *ngIf="!isUser" class="form-check-input" [(ngModel)]="msg.isCategorized" type="checkbox" />
+                        {{ msg.messageText }} <span class="form-check-sign" *ngIf="!isUser"></span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
 </div>
+
 <div class="row" *ngIf="!isUser">
   <div class="col-md-3 offset-9">
     <button (click)="Vote()" class="btn btn-round btn-success btn-block btn-lg float-right">
