--- a/src/app/workshop/retrospectives/retrospectives.component.html
+++ b/src/app/workshop/retrospectives/retrospectives.component.html
@@ -56,11 +56,27 @@
     </div>
   </div>
 
+
+  <div class="row"  *ngIf="isExistLeader()" >
+    <div class="col-12">
+      <div class="form-group">
+        <label>Davet Linki</label>
+        <input
+        #copyInput 
+          disabled
+          class="form-control"
+          value="{{inviteLink}}"
+        />
+      </div>
+      <button class="btn btn-success input-inside-button" type="button" (click)="copyLink(copyInput)" >Kopyala</button>
+    </div>
+  
+  </div>
   <div class="row" *ngIf="isShow">
     <div class="col-md-12 ml-auto mr-auto">
       <div class="form-group">
        
-        <label *ngIf="isExistLeader()" class="alert alert-primary">Davet Linki: {{inviteLink}}</label>
+        
       </div>
       <div class="card">
         <div class="card-header">
