--- a/src/app/workshop/vote/vote.component.html
+++ b/src/app/workshop/vote/vote.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-6">
-    <h4 class="card-title">Oyla</h4>
+    <h5 class="card-title">Oyla</h5>
   </div>
   <div class="col-sm-6">
 
@@ -14,8 +14,8 @@
 </div>
 
 <div *ngFor="let tmp of template.templateDetail">
-  <h3>{{tmp.header}}</h3>
-<div *ngFor="let message of GetHeaderMessage(tmp.id)">
+  <h5 class="alert alert-danger">{{tmp.header}}</h5>
+  <div *ngFor="let message of GetHeaderMessage(tmp.id)">
   <div class="row" >
     <div class="col-md-12">
       <div class="card">
