--- a/src/app/workshop/categorized/categorized.component.html
+++ b/src/app/workshop/categorized/categorized.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-6">
-    <h4 class="card-title">Kategorize Et</h4>
+    <h5 class="card-title">Kategorize Et</h5>
   </div>
   <div class="col-sm-6">
     <button *ngIf="!isUser" data-toggle="modal" data-target="#categorizeModal" (click)="selectMessage()"
@@ -11,7 +11,7 @@
 </div>
 
 <div *ngFor="let tmp of template.templateDetail">
-         <h3>{{tmp.header}}</h3>
+         <h5 class="alert alert-danger">{{tmp.header}}</h5>
          
          <div *ngFor="let msg of GetHeaderMessage(tmp.id)">
           <div class="row" [ngClass]="{'disabled': isUser }">
