--- a/src/app/workshop/schema/schema.component.html
+++ b/src/app/workshop/schema/schema.component.html
@@ -56,6 +56,21 @@
           <h4 class="title title-up">Şablon Oluştur</h4>
         </div>
         <div class="modal-body">
+
+          <div class="row">
+            <div class="col-sm-12">
+             <div class="form-group">
+               <label>Şirket</label>
+               <select class="form-control" disabled  [(ngModel)]="data.companyId"  [ngModelOptions]="{ standalone: true }">
+                      <option value="" selected>Şirket Seçiniz</option>
+                      <option [value]="company.id" *ngFor="let company of companys">{{company.companyName}}</option>
+                    
+               </select>
+
+             </div>
+
+            </div>
+         </div>
           <div class="row">
             <div class="col-sm-6"></div>
             <div class="col-sm-6">
