--- a/src/app/workshop/subject/subject-list/subject-list.component.html
+++ b/src/app/workshop/subject/subject-list/subject-list.component.html
@@ -20,14 +20,14 @@
     <button
      [disabled]="isUser"
       (click)="selectSubject(subject)"
-      class="card text-center p-3 btn w-100"
+      class="card  p-3 btn w-100"
       [ngClass]="{ active: selectSubjectId == subject.id }"
     >
       <div class="card-header">
         <h5 class="title">{{ subject.subjectTitle }}</h5>
       </div>
       <div class="card-body">
-        <span style="text-transform: initial; font-weight: 400">{{
+        <span style="text-transform: initial; font-weight: 400;white-space: initial;">{{
           subject.subjectDescription
         }}</span>
       </div>
@@ -64,6 +64,22 @@
           </h4>
         </div>
         <div class="modal-body">
+
+          <div class="row">
+             <div class="col-sm-12">
+              <div class="form-group">
+                <label>Şirket</label>
+                <select class="form-control" disabled  [(ngModel)]="subject.companyId"  [ngModelOptions]="{ standalone: true }">
+                       <option value="" selected>Şirket Seçiniz</option>
+                       <option [value]="company.id" *ngFor="let company of companys">{{company.companyName}}</option>
+                     
+                </select>
+
+              </div>
+
+             </div>
+          </div>
+
           <div class="row">
             <div class="col-12">
               <div class="form-group">
