--- a/src/app/workshop/templates/templates.component.html
+++ b/src/app/workshop/templates/templates.component.html
@@ -130,6 +130,20 @@
                   </div>
                   <div class="modal-body">
                     <div class="row">
+                      <div class="col-sm-12">
+                       <div class="form-group">
+                         <label>Şirket</label>
+                         <select class="form-control" disabled  [(ngModel)]="data.companyId"  [ngModelOptions]="{ standalone: true }">
+                                <option value="" selected>Şirket Seçiniz</option>
+                                <option [value]="company.id" *ngFor="let company of companys">{{company.companyName}}</option>
+                              
+                         </select>
+          
+                       </div>
+          
+                      </div>
+                   </div>
+                    <div class="row">
                       <div class="col-sm-6"></div>
                       <div class="col-sm-6">
                         <button
@@ -246,6 +260,20 @@
                   </div>
                   <div class="modal-body">
                     <div class="row">
+                      <div class="col-sm-12">
+                       <div class="form-group">
+                         <label>Şirket</label>
+                         <select class="form-control" disabled  [(ngModel)]="data.companyId"  [ngModelOptions]="{ standalone: true }">
+                                <option value="" selected>Şirket Seçiniz</option>
+                                <option [value]="company.id" *ngFor="let company of companys">{{company.companyName}}</option>
+                              
+                         </select>
+          
+                       </div>
+          
+                      </div>
+                   </div>
+                    <div class="row">
                       <div class="col-sm-6"></div>
                       <div class="col-sm-6">
                         <button
@@ -257,6 +285,7 @@
                         </button>
                       </div>
                     </div>
+                    
                     <div class="row">
                       <div class="col-12">
                         <section
